Update README.md and add WINDOWS_GUIDE.md for enhanced documentation
- Revised README.md to reflect the final version of the network chat program, including new features and execution methods.
- Added detailed instructions for running the program on Windows, covering Docker, WSL2, and native execution methods in WINDOWS_GUIDE.md.
- Included troubleshooting tips and system requirements for each execution method.